--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-<meta http-equiv="Refresh" content="0; url=https://44fb-240f-cf-9094-1-7ad6-9e5c-3c41-f60c.ngrok-free.app">
+<meta http-equiv="Refresh" content="0; url=https://although-tonight.gl.at.ply.gg:60386">
 </html>
