--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-<meta http-equiv="Refresh" content="0; url=https://although-tonight.gl.at.ply.gg:60386">
+<meta http-equiv="Refresh" content="0; url=https://program-rebel.gl.at.ply.gg:24407">
 </html>
